--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 header{
     font-size: 18px;
     background-color: black;
-    padding-bottom: 15px;
-    
+    color: white;
+    padding: 20px;      
 }
+body{
+    background-color:grey ;
+}
+nav{
+    list-style-type: none;
+    display: inline;
+    margin-right: 
+
+
+
+
+}
+
+
+
+
+
+    
